# mcp-runner

./: .gitmodules  Dockerfile
browser/: README-REFACTOR.md  README-cdp-test.md  README.md  cdpRelay.ts  index.ts  package.json  playwright-cdp-test.ts  ptest.ts  server.ts  tailwind.config.js  test.ts  test_pwr.ts  ws.ts  wxt.config.ts
browser-mcp/: background.js  manifest.json  popup.html
browser-mcp/_locales/am/: messages.json
browser-mcp/_locales/ar/: messages.json
browser-mcp/_locales/bg/: messages.json
browser-mcp/_locales/bn/: messages.json
browser-mcp/_locales/ca/: messages.json
browser-mcp/_locales/cs/: messages.json
browser-mcp/_locales/da/: messages.json
browser-mcp/_locales/de/: messages.json
browser-mcp/_locales/el/: messages.json
browser-mcp/_metadata/: verified_contents.json
browser-mcp/assets/: popup-Gd7fUOqs.css
browser-mcp/chunks/: popup-xxiXE7fj.js
browser-mcp/content-scripts/: content.css  content.js
browser/extension/: README.md  package-lock.json  package.json  popup.html  wxt.config.ts
browser/mcp/: index.ts  trpc-client.ts
browser/mcp/utils/: port.ts
browser/server/: index.ts  package.json  relay.ts
browser/shared/: types.ts
dockerfiles/base/: python-uv-base.dockerfile  ts-base.dockerfile
mcp/: index.ts  ws.ts
mcp/utils/: log.ts  port.ts
py_exec/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
vibz/: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  fly.toml  generateKeys.js  main.py  nginx.conf  nginx.conf.template  package.json  pyproject.toml  sst.pyi  start.sh  start.ts
(+91 files in other folders)
